# wade-ai

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INSTRUCTIONS.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  wade.spec
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: cli.py  daemon.py  main.py  setup_wizard.py  workspace.py
app/agents/: critic.py  executor.py  memory_agent.py  planner.py
app/agents/monitors/: base.py  build_logs.py  filesystem.py  proactive.py  schedule.py  system.py
app/api/v1/: admin.py  blink_auth.py  config.py  credentials.py  godmode.py  memory.py  spotify_auth.py  sync.py  tasks.py  whatsapp.py
app/assets/: wade.onnx
app/core/: browser_launcher.py  chroma_utils.py  classifier.py  config.py  credentials.py  events.py  hardware.py  hitl.py  intent_classifier.py  location.py  mdns.py  orchestrator.py  personality.py  project_loader.py  scrape.py  security.py  task_store.py  telemetry.py  tier_personality.py  user_registry.py  utils.py  version.py
app/core/runtime/: __init__.py  cognition.py  fsm.py  idempotency.py  ledger.py  policy.py  schemas.py  transport.py
app/memory/: compactor.py  episodes.py  manager.py  md_patcher.py  passive_extractor.py  semantic_memory.py
app/services/: discovery.py  inference_client.py  installer.py  messenger.py  model_manager.py  model_router.py  ollama_manager.py  proactive.py  proactive_prefs.py  voice.py
app/skills/: registry.py  sandbox.py  sdk.py  semantic_router.py
app/skills/cameras/: blink.md  blink.py
app/skills/dev/: code_review.md  code_review.py  dev_file.md  dev_file.py  dev_files.md  dev_files.py  feature_dev.md  feature_dev.py
app/skills/finance/: market_data.md  market_data.py
app/skills/flights/: aero_flow.py  get_aero_flow_telemetry.md
app/skills/indexing/: code_chunker.py  get_knowledge_inventory.md  indexer.py  inventory.py  query.py  reset_db.md  reset_db.py  search_indexed_files.md
app/skills/math/: calculator.md  calculator.py
app/skills/memory/: manage_knowledge_base.md  updater.py
app/skills/music/: manage_spotify.md  spotify.py
app/skills/news/: get_global_recon_intel.md  global_news.py
app/skills/notion/: notion.md  notion.py
app/skills/python/: run_python.md  run_shell_command.md  runner.py
app/skills/scheduling/: schedule_task.md  scheduler.py
app/skills/system/: check_hardware_stats.md  check_wade_services_health.md  diagnostics.py  escalate.py  escalate_cognition.md  hot_reload.py  perform_system_recovery.md  time.py
app/skills/vision/: analyze_screen.md  vision.py
app/skills/weather/: get_weather.md  weather.py
app/skills/web/: browser.py  control_browser.md  deep_research.md  deep_research.py  web_search.md  web_search.py
app/skills/whatsapp/: create_group.md  create_group.py  lookup_contact.md  lookup_contact.py  send_message.md  send_message.py
app/skills/workspace/: append_workspace_file.md  builder.py  delete_host_file.md  delete_workspace_file.md  dependency_mapper.py  files.py  git.py  git_branch.md  git_checkout.md  git_commit.md  git_diff.md  git_restore.md  git_status.md  map_file_dependencies.md  patch_host_file.md  run_polyglot.md  (+5 more)
app/templates/: AGENTS.md  BOOTSTRAP.md  BUSINESS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  PROJECTS.md  SOUL.md  TOOLS.md  USER.md  users.yaml
deploy/docker/: Dockerfile.gateway  Dockerfile.whatsapp  docker-compose.yml  docker-setup.sh  wa-debug.js  whatsapp-bridge.js
deploy/scripts/: entrypoint-gateway.sh
scripts/: create_tray_icons.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  quickchat.rs  tray.rs
tests/: conftest.py  test_blink_migration.py  test_classifier.py  test_credentials.py  test_critic_parallel.py  test_inference_keep_alive.py  test_model_manager.py  test_model_router.py  test_new_tabs_endpoints.py  test_notion_skill.py  test_orchestrator_tiers.py  test_planner_simple.py
tests/evals/: test_agent_pipeline.py  test_routing_accuracy.py
tests/integration/: test_inference_pipeline.py
tests/unit/: test_api_config.py  test_api_endpoints.py  test_browser_controller_engine.py  test_browser_launcher.py  test_config_name.py  test_credentials_api.py  test_critic.py  test_dev_file.py  test_episodes.py  test_events.py  test_executor.py  test_filesystem_monitor.py  test_godmode_api.py  test_godmode_integration.py  test_inference_client.py  test_inference_client_api.py  test_inference_metrics_hook.py  test_intent_classifier.py  test_manage_knowledge_base.py  test_md_patcher.py  test_memory_agent.py  test_memory_api.py  test_model_router.py  test_monitor_base.py  test_monitors.py  test_ollama_manager.py  test_orchestrator.py  test_orchestrator_telemetry.py  test_personality_substitution.py  test_planner.py  test_proactive_monitor.py  test_readiness_api.py  test_registry_risk.py  test_schedule_monitor.py  test_skill_manifest.py  test_system_monitor.py  test_task_store.py  test_task_store_migration.py  test_telemetry.py  test_tool_routing.py  (+3 more)
(+19 files in other folders)
