[package]
name    = "wade-desktop"
version = "2.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                        = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell           = "2"
tauri-plugin-notification    = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog          = "2"
serde                        = { version = "1", features = ["derive"] }
serde_json                   = "1"
tokio                        = { version = "1", features = ["net", "time"] }
